kustomization/shared/helloworld/overlays/argo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  selector:
    matchLabels:
      app: helloargo
  template:
    metadata:
      labels:
        app: helloargo
