kustomization/shared/helloworld/overlays/argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  selector:
    app: helloargo
