kustomization/shared/helloworld/overlays/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloargo
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: helloargo.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloargo
            port:
              number: 5000
